# widget_bank

./: main.py  pyproject.toml  readme.md  requirements.txt
src/: date.py  generators.py  processing.py  resources.py  widget.py
tests/: conftest.py  test_date.py  test_generators.py  test_processing.py  test_resourses.py  test_widget.py
